BUG 8500 Checkboxes when creating/editing the structure of PM Tables should be centered SOLVED
- The checkboxes in the fields grid are not centered
- Added style to center the checkboxes in the fields grid

--- a/workflow/engine/skinEngine/base/baseCss/ext-all-notheme.css
+++ b/workflow/engine/skinEngine/base/baseCss/ext-all-notheme.css
@@ -837,7 +837,7 @@ ul.x-tab-strip li.x-tab-edge {
 }
 
 .x-tab-scrolling {
-    position:relative;    
+    position:relative;
 }
 
 .x-tab-panel-bbar .x-toolbar {
@@ -2265,7 +2265,7 @@ div.x-toolbar-no-items {
 }
 
 .ext-strict .x-grid3-header-pop-inner {
-    width:14px; 
+    width:14px;
 }
 
 .x-grid3-header-inner {
@@ -4465,7 +4465,7 @@ body.ext-ie6.x-body-masked .x-window select {
 
 .x-html-editor-tb .x-edit-bold, .x-menu-item img.x-edit-bold {
     background-position:0 0;
-    background-image:url(../images/default/editor/tb-sprite.gif);    
+    background-image:url(../images/default/editor/tb-sprite.gif);
 }
 
 .x-html-editor-tb .x-edit-italic, .x-menu-item img.x-edit-italic {
@@ -5023,7 +5023,7 @@ body.ext-ie6.x-body-masked .x-window select {
     -khtml-user-select:none;
     -webkit-user-select:ignore;
 	display:block;
-	overflow:hidden;  
+	overflow:hidden;
 }
 
 /* Horizontal styles */
@@ -5147,4 +5147,8 @@ body.ext-ie6.x-body-masked .x-window select {
 
 .ext-gecko2 .ext-mb-fix-cursor {
     overflow:auto;
+}
+
+.x-box-inner .x-form-check-wrap {
+    text-align:center;
 }
